# OpenFace

./: CMakeLists.txt
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  TrainModel.cpp
exe/NewTrainModel/: CMakeLists.txt  TrainModel.cpp  cropFile.cpp  shuffleData.cpp  svm.cpp  svm.h
exe/TrainModel/: CMakeLists.txt  TrainModel.cpp  TrainModelNoPCA.cpp  shuffleData.cpp
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp
